--- a/views/edits/crypto_finance_ledger_info_edit.ejs
+++ b/views/edits/crypto_finance_ledger_info_edit.ejs
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edit Crypto Exchange</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
  </head>
  <style>
 
@@ -35,14 +37,10 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll;
+        overflow-y: scroll; 
         }
 
-  fieldset{
-    writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;
-  }
 </style>
  <body>
     <main>
@@ -51,7 +49,7 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
             <fieldset>
               <legend>Edit In New Information for the Currency Exchange</legend>
               <br />
-                <label>
+                <label class="list-item">
                 Financial User Ledger Info ID:<input
                   type="number"
                   name="finance_user_id"
@@ -59,7 +57,7 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
                 />
               </label>
               <br />
-              <label>
+              <label class="list-item">
                 Financial User Ledger Info Name:<input
                   type="text"
                   name="finance_user_name"
@@ -67,7 +65,7 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
                 />
               </label>
               <br />
-              <label>
+              <label class="list-item">
                 Financial User Ledger Info Birthday:<input
                   type="text"
                   name="finance_user_birthday"
@@ -75,164 +73,165 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
                 />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info SSN:<input type="text" name="finance_user_SSN"
+              <label class="list-item">
+                Financial User Ledger Info SSN:<input class="button is-warning" type="text" name="finance_user_SSN"
                  placeholder="Enter Financial User Ledger Info SSN..." />
               </label>
               <br /> 
-             <label>
-                Financial User Ledger Info Residence Address:<input type="text" name="finance_user_residence_address" 
+             <label class="list-item">
+                Financial User Ledger Info Residence Address:<input class="button is-warning" type="text" name="finance_user_residence_address" 
                 placeholder="Enter Financial User Ledger Info Residence Address..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Phone Number:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Phone Number:<input class="button is-warning" type="text" 
                 name="finance_user_phone_number" placeholder="Enter Financial User Ledger Info Phone Number..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Period At Residence Address:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Period At Residence Address:<input class="button is-warning" type="text" 
                 name="finance_user_year_period_at_residence_address" placeholder="Enter Financial User Ledger Info Period At Residence Address..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Occupation:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Occupation:<input class="button is-warning" type="text" 
                 name="finance_occupation" placeholder="Enter Financial User Ledger Info Period At Residence Address..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Employer Name:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Employer Name:<input class="button is-warning" type="text" 
                 name="finance_employer_name" placeholder="Enter Financial User Ledger Info Finance Employer Name..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Year Period At Employer:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Year Period At Employer:<input class="button is-warning" type="text" 
                 name="finance_user_year_period_at_employer" placeholder="Enter Financial User Ledger Info Finance Year Period At Employer..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Num Of Dependents:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Num Of Dependents:<input class="button is-warning" type="number" 
                 name="finance_num_of_dependents" placeholder="Enter Financial User Ledger Info Num Of Dependents..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Credit Card Name:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Credit Card Name:<input class="button is-warning" type="text" 
                 name="finance_credit_card_name" placeholder="Enter Financial User Ledger Info Credit Card Name..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Credit Card Limit:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Credit Card Limit:<input class="button is-warning" type="number" 
                 name="finance_credit_card_limit" placeholder="Enter Financial User Ledger Info Credit Card Limit..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Credit Card Owed Value:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Credit Card Owed Value:<input class="button is-warning" type="number" 
                 name="finance_credit_card_financial_owedvalue" placeholder="Enter Financial User Ledger Info Credit Card Owed Value..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Credit Card Monthly Payment:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Credit Card Monthly Payment:<input class="button is-warning" type="number" 
                 name="finance_credit_card_monthly_payment" placeholder="Enter Financial User Ledger Info Credit Card Owed Value..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Name:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Name:<input class="button is-warning" type="text" 
                 name="finance_spouse_name" placeholder="Enter Financial User Ledger Info Spouse Name..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Birthday:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Birthday:<input class="button is-warning" type="text" 
                 name="finance_spouse_birthday" placeholder="Enter Financial User Ledger Info Spouse Birthday..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse SSN:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse SSN:<input class="button is-warning" type="text" 
                 name="finance_spouse_SSN" placeholder="Enter Financial User Ledger Info Spouse SSN..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Residence Address:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Residence Address:<input class="button is-warning" type="text" 
                 name="finance_spouse_residence_address" placeholder="Enter Financial User Ledger Info Spouse Residence Address..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Occupation:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Occupation:<input class="button is-warning" type="text" 
                 name="finance_spouse_occupation" placeholder="Enter Financial User Ledger Info Spouse Occupation..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Employer:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Employer:<input class="button is-warning" type="text" 
                 name="finance_spouse_employer" placeholder="Enter Financial User Ledger Info Spouse Employer..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Spouse Year Period At Employer:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Spouse Year Period At Employer:<input class="button is-warning" type="text" 
                 name="finance_spouse_year_period_at_employer" placeholder="Enter Financial User Ledger Info Spouse Year Period At Employer..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Asset Names 1:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Asset Names 1:<input class="button is-warning" type="text" 
                 name="finance_asset_names_1" placeholder="Enter Financial User Ledger Info Financial Asset Names 1..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Asset Financial Values 1:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Asset Financial Values 1:<input class="button is-warning" type="number" 
                 name="finance_asset_financial_values_1" placeholder="Enter Financial User Ledger Info Finance Asset Financial Values 1..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Liabilities Names 1:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Liabilities Names 1:<input class="button is-warning" type="text" 
                 name="finance_liabilities_names_1" placeholder="Enter Financial User Ledger Info Financial Owed Liabilities Names 1..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Values 1:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Values 1:<input class="button is-warning" type="number" 
                 name="finance_liabilities_financial_owedvalues_1" placeholder="Enter Financial User Ledger Info Financial Owed Values 1..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Asset Names 2:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Asset Names 2:<input class="button is-warning" type="text" 
                 name="finance_asset_names_2" placeholder="Enter Financial User Ledger Info Financial Asset Names 2..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Asset Financial Values 2:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Asset Financial Values 2:<input class="button is-warning" type="number" 
                 name="finance_asset_financial_values_2" placeholder="Enter Financial User Ledger Info Finance Asset Financial Values 2..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Liabilities Names 2:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Liabilities Names 2:<input class="button is-warning" type="text" 
                 name="finance_liabilities_names_2" placeholder="Enter Financial User Ledger Info Financial Owed Liabilities Names 2..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Values 2:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Values 2:<input class="button is-warning" type="number" 
                 name="finance_liabilities_financial_owedvalues_2" placeholder="Enter Financial User Ledger Info Financial Owed Values 2..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Asset Names 3:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Asset Names 3:<input class="button is-warning" type="text" 
                 name="finance_asset_names_3" placeholder="Enter Financial User Ledger Info Financial Asset Names 3..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Finance Asset Financial Values 3:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Finance Asset Financial Values 3:<input class="button is-warning" type="number" 
                 name="finance_asset_financial_values_3" placeholder="Enter Financial User Ledger Info Finance Asset Financial Values 3..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Liabilities Names 3:<input type="text" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Liabilities Names 3:<input class="button is-warning" type="text" 
                 name="finance_liabilities_names_3" placeholder="Enter Financial User Ledger Info Financial Owed Liabilities Names 3..." />
               </label>
               <br />
-              <label>
-                Financial User Ledger Info Financial Owed Values 3:<input type="number" 
+              <label class="list-item">
+                Financial User Ledger Info Financial Owed Values 3:<input class="button is-warning" type="number" 
                 name="finance_liabilities_financial_owedvalues_3" placeholder="Enter Financial User Ledger Info Financial Owed Values 3..." />
               </label>
               <br />
             </fieldset>
-            <input type="submit" value="Submit" />
-            <button class="return_to_currency_exchange_index"><a href="/crypto_finance/financial_ledger_show/<%=id %>">Return to the Financial User Ledger Info Home Screen</a></button>
+            <input class="button is-warning is-primary" type="submit" value="Submit" />
+            <br />
+            <button class="button is-warning" id="return_to_currency_exchange_index"><a href="/crypto_finance/financial_ledger_show/<%=id %>">Return to the Financial User Ledger Info Home Screen</a></button>
           </form>
         </div>
       </main>
