--- a/views/ledgers/crypto_finance_cryptoexchange_show_2.ejs
+++ b/views/ledgers/crypto_finance_cryptoexchange_show_2.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinSeek Tracking/Reporting System Crypto Exchange Individual Information Show Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
 <style>
     .crypto_exchange_currency_header {
@@ -23,26 +25,35 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll;
+        overflow-y: scroll; 
         }
     
         p {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black;
         }
-    
-        div {
-            writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;}
+
+        .crypto_exchange_header {
+            font-size: 30px;
+            border-radius: 30px;
+        text-align: center;
+        color:goldenrod;
+        -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+        }
 
     </style>
 </style>
 <div class="crypto_finance_cryptoexchange">
 <main class="crypto_finance_cryptoexchange_main">
-    <h2 class="crypto_exchange_currency_header"><b>Finseek Ledger System Cryptocurrency Exchange Coin/Token Information</b></h2>
-    <div class="crypto_finance_cryptoexchange_index">
+    <h2 class="crypto_exchange_header"><b>Finseek Ledger System Cryptocurrency Exchange Coin/Token Information</b></h2>
+    <br />
+    <br />
+    <br />
+    <div class="block" style="border-radius: 40%; background-color: white" id="crypto_finance_cryptoexchange_index">
         <p><b>Cryptocurrency Exchange URL Link</b>: <u><em><%= crypto_ex.crypto_currency_exchange_org_url_link %></em></u></p>
         <p><b>Cryptocurrency Name</b>: <u><em><%= crypto_ex.crypto_currency_name %></em></u></p>
         <p><b>Cryptocurrency Current Price</b>: <u><em><%= crypto_ex.crypto_currency_price %></em></u></p>
@@ -53,18 +64,37 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         <p><b>Cryptocurrency Blockchain Sending Transaction Hash ID</b>: <u><em><%= crypto_ex.blockchain_sending_transaction_hash_id_num %></em></u></p>
         <p><b>Cryptocurrency Quantity</b>: <u><em><%= crypto_ex.crypto_currency_quantity %></em></u></p>    
     </div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <a href="/crypto_finance/crypto_exchange_edit/<%=ID %>" align="right">
-    <button class="Edit">Edit Crypto Exchange Instance Data</button>
+    <button class="button is-warning" id="Edit">Edit Crypto Exchange Instance Data</button>
 </a>
+<br />
+<br />
 <form action="/crypto_finance/crypto_exchange_show/<%=ID %>?_method=DELETE" method="POST" 
     align="center" name="cryptoexchange_post_form">
     <label>
-        <button class="Delete">Delete Crypto Exchange Instance Data</button>
+        <button class="button is-warning" id="Delete">Delete Crypto Exchange Instance Data</button>
     </label>
 </form>
+<br />
 <form action="/crypto_finance/crypto_exchange_show" method="get" align="center" name="go_to_first_crypto_exchange_show_form">
     <label>
-        <button class="return_to_crypto_index" align="center"><a href="/crypto_finance/crypto_exchange_show">Return to previous Crypto Exchange Show Page</a></button>
+        <button class="button is-warning" id="return_to_crypto_index" align="center"><a href="/crypto_finance/crypto_exchange_show">Return to previous Crypto Exchange Show Page</a></button>
     </label>
 </form></div>
 </main>
