--- a/views/ledgers/crypto_finance_cryptoexchange_show.ejs
+++ b/views/ledgers/crypto_finance_cryptoexchange_show.ejs
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinSeek Tracking/Reporting System Crypto Exchange Information Show Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
 <style>
     .FinSeek_Crypto_Finance_cryptoexchange_show_title_p {
         font-size: 30px;
         border-radius: 30px;
     text-align: center;
-    color:white;
+    color:goldenrod;
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 box-shadow: 1px 2px 3px rgba(0,0,0,.5);
@@ -24,50 +26,54 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll;
+        overflow-y: scroll;  
         }
     
         p {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black;
         }
-    
-        div {
-            writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;}
-
-      main {
-        writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;
-      }
 
     </style>
 </style>
 <div class="crypto_finance_cryptoexchange">
 <main class="crypto_finance_cryptoexchange_main">
     <h2><p class="FinSeek_Crypto_Finance_cryptoexchange_show_title_p"><b><em>FinSeek Crypto/Finance Crypto Exchange Tracking/Reporting System Ledger Information </em></b></p></h2> 
+    <br />
     <% for(let index=0; index < crypto_ex.length; index++) { %>
-        <div class="Cryptocurrency_exchange_index">
-            <p class="FinSeek_Crypto_Finance_cryptoexchange_id"><b>Crypto Exchange ID</b>: <em><a href="/crypto_finance/crypto_exchange_show/<%=index%>"><%=crypto_ex[index].crypto_exchange_id %></a></em></p>    
-        </div>        
-            <iframe width="800" height="250" src="<%=crypto_ex[index].crypto_currency_exchange_org_url_link %>" 
-            title="Crypto Currency Exchanges URL" frameborder="0" 
+        <div class="tag button" style="width:100%; height:100%; border-radius: 40%;" id="Cryptocurrency_exchange_index">
+            <p class="list-item" id="FinSeek_Crypto_Finance_cryptoexchange_id"><b>Crypto Exchange ID</b>: <em><a href="/crypto_finance/crypto_exchange_show/<%=index%>"><%=crypto_ex[index].crypto_exchange_id %></a></em></p>    
+        </div>
+        <br />    
+            <iframe width="950" height="650" src="<%=crypto_ex[index].crypto_currency_exchange_org_url_link %>" 
+                title="Crypto Currency Exchanges URL" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             ></iframe>
         
 <% } %>
-  
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <form action="/crypto_finance/crypto_exchange_new" method="get" align="right" name="create_cryptoexchange_new_form">
     <label>
-        <input name="cryptoexchange_create_new_btn" type="submit" id="cryptoexchange_create_new_btn__" value="Add/Create Finseek Ledger System Crypto Exchange Instance(s)"></label>
+        <button class="button is-warning is-primary" id="cryptoexchange_create_new_btn__" align="right"><a href="/crypto_finance/crypto_exchange_new">Add/Create Finseek Ledger System Crypto Exchange Instance(s)</a></button>
     </label>
 </form>
+<br />
 <form action="/crypto_finance/ledger_index" method="get" align="right" name="go_to_crypto_finance_ledger_index_form">
     <label>
-        <button class="return_to_crypto_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning" id="return_to_crypto_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
     </label>
 </form>
 </main></div> 
