--- a/views/ledgers/crypto_finance_currencyexchange_show.ejs
+++ b/views/ledgers/crypto_finance_currencyexchange_show.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinSeek Tracking/Reporting System Currency Exchange Information Show</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
 <style>
     .currency_exchange_info_show_title_p {
@@ -24,48 +26,52 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll;
+        overflow-y: scroll; 
         }
     
         p {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black;
         }
-    
-        div {
-            writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;}
-
-      main {
-        writing-mode: horizontal;
-  border: 5px solid yellow;
-  border-inline-style:dashed;}
 
     </style>
 </style>
 <div class="currency_exchange_info">
 <main class="currency_exchange_info_main">
-    <h2><p class="currency_exchange_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Currency Exchange Information </em></b></p></h2> 
+    <h2><p class="currency_exchange_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Currency Exchange Information </em></b></p></h2>
+    <br />
+    <br />
+    <br />
     <% for(let index=0; index < currency_exchange.length; index++) { %>
-        <iframe width="800" height="250" src="<%=currency_exchange[index].currency_exchange_org_url_link %>" 
+        <div class="tag" style="width:100%; height:100%; border-radius: 40%;" id="currency_exchange_info_index">
+            <p class="list-item" id="currency_exchange_info_id"><b>Financial User(s) Currency Exchange Info ID</b>: <em><a href="/crypto_finance/currency_exchange_show/<%=index%>"><%=currency_exchange[index].finance_currency_exchange_info_id %></a></em></p>
+        </div>
+        <br />
+        <br />
+        <br />
+        <iframe width="700" height="950" src="<%=currency_exchange[index].currency_exchange_org_url_link %>" 
             title="Currency Exchange URL" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             ></iframe>
-        <div class="currency_exchange_info_index">
-            <p class="currency_exchange_info_id"><b>Financial User(s) Currency Exchange Info ID</b>: <em><a href="/crypto_finance/currency_exchange_show/<%=index%>"><%=currency_exchange[index].finance_currency_exchange_info_id %></a></em></p>
-        </div>
+        
    <% } %>
-
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
 <form action="/crypto_finance/currency_exchange_new" method="get" align="right" name="create_currency_exchange_new_form">
     <label>
-        <input name="currency_exchange_info_create_new_btn" type="submit" id="currency_exchange_info_create_new_btn__" value="Add/Create Finseek Ledger System Crypto Finance Currency Exchange Instance(s)"></label>
+        <button class="button is-warning is-primary" id="currency_exchange_info_create_new_btn__" align="right"><a href="/crypto_finance/currency_exchange_new">Add/Create Finseek Ledger System Crypto Finance Currency Exchange Instance(s)</a></button>
     </label>
 </form>
+<br />
 <form action="/crypto_finance/ledger_index" method="get" align="right" name="go_to_currency_exchange_index_form">
     <label>
-        <button class="return_to_currency_exchange_info_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning" id="return_to_currency_exchange_info_index" align="right"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
     </label>
 </form>
 </main></div>
