--- a/views/ledgers/crypto_finance_ledger_info_show.ejs
+++ b/views/ledgers/crypto_finance_ledger_info_show.ejs
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinSeek Tracking/Reporting System Ledger Information Show</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
 </head>
 <style>
     .FinSeek_Crypto_Finance_ledger_info_show_title_p {
         font-size: 30px;
         border-radius: 30px;
     text-align: center;
-    color:white;
+    color:goldenrod;
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 box-shadow: 1px 2px 3px rgba(0,0,0,.5);
@@ -24,40 +26,67 @@ box-shadow: 1px 2px 3px rgba(0,0,0,.5);
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll;
+        overflow-y: scroll; 
         }
     
         p {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black
         }
-    
-        div {
-            writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;}
 
-      .crypto_finance_ledger_info {
-        writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;
-      }
 
     </style>
 </style>
 <div class="crypto_finance_ledger_info">
 <main class="crypto_finance_ledger_info_main">
     <h2><p class="FinSeek_Crypto_Finance_ledger_info_show_title_p"><b><em>FinSeek Crypto/Finance Tracking/Reporting System Ledger Information </em></b></p></h2> 
+    <br />
+    <br />
     <% for(let index=0; index < ledger_info.length; index++) { %>
-        <div class="crypto_finance_ledger_info_index">
-            <p class="FinSeek_Crypto_Finance_ledger_info_id"><b>Financial User(s) Ledger Info ID</b>: <em><a href="/crypto_finance/financial_ledger_show/<%=index%>"><%=ledger_info[index].finance_user_id %></a></em></p>
-            </div>
+        <div class="tag button" style="width:100%; height:100%; border-radius: 40%;" id="crypto_finance_ledger_info_index">
+            <p class="list-item" class="FinSeek_Crypto_Finance_ledger_info_id"><b>Financial User(s) Ledger Info ID</b>: <em><a href="/crypto_finance/financial_ledger_show/<%=index%>"><%=ledger_info[index].finance_user_id %></a></em></p>
+        </div>
+        <br />
+        <br />
    <% } %>
-<button><a href="/crypto_finance/finance_ledger_new">Add Crypto/Finance Ledger System Instance(s)</a></button>
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+   <br />
+<button class="button is-warning is-primary"><a href="/crypto_finance/finance_ledger_new">Add Crypto/Finance Ledger System Instance(s)</a></button>
+<br />
+<br />
 <form action="/crypto_finance/ledger_index" method="get" align="center" name="go_to_crypto_finance_ledger_index_form">
     <label>
-        <button class="return_to_crypto_finance_ledger_info_index" align="center"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
+        <button class="button is-warning" id="return_to_crypto_finance_ledger_info_index" align="center"><a href="/crypto_finance/ledger_index">Return to Finseek Crypto/Finance Ledger System Home Screen</a></button>
     </label>
 </form>
 </main>
