--- a/views/new/crypto_finance_ledger_info_new.ejs
+++ b/views/new/crypto_finance_ledger_info_new.ejs
@@ -16,44 +16,44 @@ integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="ano
         height: 100%;
         margin: 0px;
         padding: 0px;
-        overflow-x: hidden; 
+        overflow-x: scroll; 
+        overflow-y: scroll; 
         }
 
         form {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black;
         }
 
         h1 {
             font-size: 25px;
             text-size-adjust: 15px;
-            color: #fff;
+            color: black
         }
-    
-        .financial_ledger_create_new {
-            writing-mode: horizontal;
-      border: 5px solid yellow;
-      border-inline-style:dashed;}
 
       button {
         text-align: right;
       }
 
-
 </style>
 <body>
-    <div class="financial_ledger_create_new">
+    <div class="block" style="border-radius: 40%; background-color: white" id="financial_ledger_create_new">
         <h1>Creating New Financial Ledger Info Instance</h1>
     <form action="/crypto_finance/financial_ledger_show" method="post">
             Financial Ledger Info ID: <input name="finance_user_id" 
             type="number" 
             placeholder="Enter a value for the Financial Ledger Info ID instance..."/>
         <br />
-        <button><input type="submit" value="Add New Financial Ledger Info Instance" /></button>
+        <button class="button is-warning is-primary"><input type="submit" value="Add New Financial Ledger Info Instance" /></button>
         <br />
-        <button class="return_to_currency_index"><a href="/crypto_finance/financial_ledger_show">Return to Currency Exchange Home Screen</a></button>
+        <button  class="button is-warning"id="return_to_currency_index"><a href="/crypto_finance/financial_ledger_show">Return to Currency Exchange Home Screen</a></button>
     </form>
     </div>
 </body>
+<br />
+    <br />
+    <br />
+    <img src="https://i.imgur.com/3eRq8UF.png" width="500" 
+    height="500" />
 </html>
