--- a/views/user_login_signup/crypto_finance_user_signup.ejs
+++ b/views/user_login_signup/crypto_finance_user_signup.ejs
@@ -1,23 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<link type="text/css" rel="stylesheet" href="/public/css/signup_login_css.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma-rtl.min.css">
+<style>
+    html{
+        background-image: url('https://i.imgur.com/3eRq8UF.png');
+        background-size: 150px;
+        background-repeat: repeat;
+        overflow-x: scroll;
+        overflow-y: scroll; 
+    }
 
-<body id="crypto_finance_signup_body">
+    #crypto_finance_signup_body {
+        text-align: center;
+    }
+    
+    #crypto_finance_signup_body h1 { color: hwb(0 100% 0% / 0.956); text-shadow: 0 0 30px rgba(0,0,0,4.3); 
+        letter-spacing:1px; text-align:center; 
+        background-color: rgba(240, 240, 5, 0.75);
+        border-radius: 40%;
+        border: hidden;
+    }
+    
+    .new_user_create_form{
+        color:black;
+        box-shadow: 0 0 30px rgba(0,0,0,4.3);
+        text-shadow: 0 0 30px rgba(0,0,0,4.3);
+        border: none;
+        letter-spacing:1px;
+        text-align:center;
+    }
+     
+    .signup_btn {
+        background-color: rgba(240, 240, 5, 0.75);
+        border-radius: 35%;
+    }
+</style>
+<script>
+    function errorMessage() {
+        var user_name_error = document.getElementById("username_error_message").value;
+        var pw_error = document.getElementById("psswrd_error_message").value;
+        var psswrd = document.getElementById("password_input_login").value
+        var usr_name = document.getElementById("password_input_login").value
+        if (usr_name && typeof usr_name.valueOf() != "string") {
+            user_name_error.textContent = "Incorrect Datatype used for the username, please enter a valid string datatype username value for the username...."
+            user_name_error.style.color = "red"
+        }
+        if (psswrd && typeof psswrd.valueOf() == "string") {
+            pw_error.textContent = "Incorrect Datatype used for the password, please enter a valid string datatype password value for the password...."
+            pw_error.style.color = "red"
+        }
+    }
+    </script>
+    <body id="crypto_finance_signup_body">
         <h1><em><b>
             Create New FinSeek Crypto/Finance Ledger System User
         </b></em></h1>
         <form action="/user/signup" method="post" class="new_user_create_form">
-            <fieldset>
-                <label><b><u>Enter Username: </u></b><input type="text" name="username" required></label></br>
+            <fieldset class="block">
+                <label><b><u><p class="label button" style="color:black; background-color:white; border-radius: 40%;">Enter Username: </p></u></b><input class="button is-warning" type="text" name="username" placeholder="Enter Username Here....." required></label></br>
+                <span id="username_error_message"></span>
                 <br/>
-                <label><b><u>Enter Password: </u></b><input type="password" name="password" required></label></br>
+                <label><b><u><p class="label button" style="color:black; background-color:white; border-radius: 40%;">Enter Password: </p></u></b><input class="button is-warning" type="password" name="password" placeholder="Enter Password Here....." required></label></br>
+                <span id="psswrd_error_message"></span>
                 <br/>
                 <br/>
-                <label><input type="submit" class="signup_btn" value="Create FinSeek Crypto/Finance User(s)"></label>
+                <label><input class="button is-warning" type="submit" id="signup_btn" value="Create FinSeek Crypto/Finance User(s)"></label>
             </fieldset>
         </form>
         <br/>
-        <button class="btn_login_page"><a href="/user/login">Back to Initial Login Page</a></button></div>    
+        <button class="button is-warning" id="btn_login_page"><a href="/user/login">Back to Initial Login Page</a></button></div>    
     </body>
 </main>
 </html>
